<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="search_user">Find user by Github ID</string>
    <string name="search">Search</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="created_at">Created At</string>
    <string name="name">Name</string>
    <string name="user_image">User Image</string>
    <string name="github_link">Github Link</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="user_not_found">User Not Found</string>
</resources>