<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.wonjoong.search.ui.SearchViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="8dp"
            android:hint="@string/search_user"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={viewModel.userInput}"
            app:layout_constraintEnd_toStartOf="@id/btn_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.searchInput()}"
            android:text="@string/search"
            app:layout_constraintBottom_toBottomOf="@id/et_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/et_search"
            app:layout_constraintTop_toTopOf="@id/et_search" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_search" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="iv_profile_image, tv_name, tv_target_created_at, tv_follower, tv_target_follower, tv_following, tv_target_following, tv_created_at, tv_target_created_at" />

        <ImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/user_image"
            app:layout_constraintStart_toStartOf="@id/et_search"
            app:layout_constraintTop_toBottomOf="@id/et_search"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/iv_profile_image"
            app:layout_constraintTop_toBottomOf="@id/iv_profile_image" />

        <TextView
            android:id="@+id/tv_target_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={viewModel.name}"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="@id/tv_target_created_at"
            app:layout_constraintTop_toTopOf="@id/tv_name"
            tools:text="John Doe" />

        <TextView
            android:id="@+id/tv_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follower"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_target_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={viewModel.follower}"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/tv_follower"
            app:layout_constraintStart_toStartOf="@id/tv_target_created_at"
            app:layout_constraintTop_toTopOf="@id/tv_follower"
            tools:text="37" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_follower"
            app:layout_constraintTop_toBottomOf="@id/tv_follower" />

        <TextView
            android:id="@+id/tv_target_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={viewModel.following}"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/tv_following"
            app:layout_constraintStart_toStartOf="@id/tv_target_created_at"
            app:layout_constraintTop_toTopOf="@id/tv_following"
            tools:text="54" />

        <TextView
            android:id="@+id/tv_created_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_at"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_following"
            app:layout_constraintTop_toBottomOf="@id/tv_following" />

        <TextView
            android:id="@+id/tv_target_created_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@={viewModel.createdAt}"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/tv_created_at"
            app:layout_constraintStart_toEndOf="@id/tv_created_at"
            app:layout_constraintTop_toTopOf="@id/tv_created_at"
            tools:text="11/08/2019" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>